k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: api-gateway-ingress
 namespace: ecommerce-app
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: "nginx"
spec:
 ingressClassName: webapprouting.kubernetes.azure.com
 rules:
   # La línea 'host: ecommerce.local' ha sido eliminada de aquí
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: api-gateway
               port:
                 number: 8080
